Fix rideshare popup. Also align popup to center.

--- a/css/sass/layout.scss
+++ b/css/sass/layout.scss
@@ -3692,3 +3692,4 @@ table.ui-table-reflow {
   width: 100%;
 }
 ul.ui-listview > li.ui-first-child > a.ui-btn { border-top: none !important; }
+.ui-btn-icon-left:after, .ui-btn-icon-right:after, .ui-btn-icon-top:after, .ui-btn-icon-bottom:after, .ui-btn-icon-notext:after{height: 18px;}
